@@ -4,7 +4,7 @@
 
 pkgname=subversion
 pkgver=1.6.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Replacement for CVS, another versioning system (svn)"
 arch=(i686 x86_64)
 license=('apache' 'bsd')
@@ -15,6 +15,12 @@ makedepends=('heimdal>=1.2' 'db>=4.7' 'apache>=2.2.9-3' 'python>=2.6-1'
 source=(http://subversion.tigris.org/downloads/$pkgname-$pkgver.tar.bz2
         svnserve svn svnserve.conf svnmerge.py
         subversion.rpath.fix.patch)
+md5sums=('8bf7637ac99368db0890e3f085fa690d' 'c5a2e490b3e58c6bd2ca3a2e72b71845'\
+         'a0db6dd43af33952739b6ec089852630' 'c459e299192552f61578f3438abf0664'\
+         '21bf3aa5b797ce98eba8307f30e9c070' '6b4340ba9d8845cd8497e013ae01be3f')
+sha1sums=('88a4a21509f9d8f95a64f7545f3294d356f619c8' '37796cd8222fd77c5ed1985d170bcdbc43907262'\
+         '73b36c046c09cec2093354911c89e3ba8056af6c' 'ad117bf3b2a838a9a678a93fd8db1a066ad46c41'\
+         '87eec187de915f9ace925bd18385971cd8ea38e8' '3d1e28408a9abb42af2e531adc0d01ce21acfad6')
 
 backup=('etc/xinetd.d/svn' 'etc/conf.d/svnserve')
 url="http://subversion.tigris.org/"
@@ -71,9 +77,3 @@ build() {
    install -m 755 $startdir/src/svnmerge.py $startdir/pkg/usr/bin/svnmerge
    install -D -m 644 $startdir/src/subversion-$pkgver/COPYING $startdir/pkg/usr/share/licenses/$pkgname/LICENSE
 }
-md5sums=('8bf7637ac99368db0890e3f085fa690d'
-         'c5a2e490b3e58c6bd2ca3a2e72b71845'
-         'a0db6dd43af33952739b6ec089852630'
-         'c459e299192552f61578f3438abf0664'
-         '21bf3aa5b797ce98eba8307f30e9c070'
-         '6b4340ba9d8845cd8497e013ae01be3f')
