@@ -1,3 +1,6 @@
+2009-08-02  Eric Belanger  <eric@archlinux.org>
+
+	* subversion 1.6.3-2: Rebuilt against ruby 1.9
 
 2009-06-07  Douglas Soares de Andrade  <douglas@archlinux.org>
 
